# metadsl

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  Demo.ipynb  Makefile  README.md  ROADMAP.md  TODO  Untitled.ipynb  Untitled1.ipynb  all.pyproject.toml  conftest.py  core.pyproject.toml  llvm.pyproject.toml  mypy.ini  notes.md  numpy.pyproject.toml  pyproject.toml  pytest.ini  python.pyproject.toml  rewrite.pyproject.toml  tests.ipynb  tox.ini  typez.pyproject.toml  untitled.md  visualize.pyproject.toml
benchmarks/: fib.py  vec.py
binder/: apt.txt  environment.yml  postBuild
docs/: Concepts.ipynb  Contributing.md  Introduction.ipynb  Lambda Calculus.ipynb  Motivation.md  NumPy.md  Principles.md  Python.md  Roadmap.md  Serialization.md  Simple Arrays.ipynb  Simple Integer Algebra.ipynb  Tutorial.ipynb  Usage.md  Why.md  conf.py  index.rst  index_example.py  index_examply.py  python_compat.md
explorations/: 2019.03.24 Meta DSL.ipynb  2019.03.25 Expression.ipynb  2019.03.28 No NumPy.ipynb  2019.04.02 No NumPy.ipynb  2019.04.03 MetaDSL + UArray.ipynb  2019.04.06 TF Torch.ipynb  2019.04.12 Hashing.ipynb  2019.04.18 MoA.ipynb  2019.04.19 Using dataclasses as functions.ipynb  2019.05.02 uarray.ipynb  2019.05.06 NP Example.ipynb  2019.05.06 NP Example.py  2019.05.07 NP Example.ipynb  2019.05.10 PyGotham Talk.md  2019.05.15.ipynb  2019.09.01 PyData NYC Talk.md  2019.09.14 Testing.ipynb  2019.09.15 LLVM IR.ipynb  2019.09.16  Simple Conversion.ipynb  2019.09.16 Fib.ipynb  2019.09.16 Simple Expression Changes.ipynb  2019.09.17 Fib LLMV.ipynb  2019.09.18 Typing Explorations.ipynb  2019.09.19 Fib LLVM.ipynb  2019.09.19 Fib LLVM.py  2019.09.19 Frame Exploration.ipynb  2019.09.20 Simple Function.ipynb  2019.09.20 Simple Function.py  2019.09.22 Example Minilang.ipynb  (+19 more)
(+194 files in other folders)
